refactor: routes and models
