# internal/api/routes/containers.go
@@ -1,4 +1,4 @@
-package api
+package routes
 
 import (
 	"net/http"
@@ -6,9 +6,10 @@ import (
 
 	"github.com/gin-gonic/gin"
 	_ "github.com/italobbarros/go-mqtt-broker/docs"
+	models "github.com/italobbarros/go-mqtt-broker/internal/api/models"
 )
 
-// Example for ContainerPost model
+// Example for Container model
 
 // createContainer cria um novo container.
 // @Summary Create a new container
@@ -16,17 +17,17 @@ import (
 // @Tags Container
 // @Accept json
 // @Produce json
-// @Param input body ContainerPost true "Container object that needs to be added"
-// @Success 201 {object} ContainerPost
+// @Param input body models.ContainerRequest true "Container object that needs to be added"
+// @Success 201 {object} models.ContainerRequest
 // @Router /containers [post]
-func (a *API) createContainer(c *gin.Context) {
-	var container Container
+func (r *Routes) CreateContainer(c *gin.Context) {
+	var container models.Container
 	if err := c.ShouldBindJSON(&container); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	a.db.Create(&container)
+	r.db.Create(&container)
 	c.JSON(http.StatusCreated, container)
 }
 
@@ -35,11 +36,11 @@ func (a *API) createContainer(c *gin.Context) {
 // @Description Get all containers
 // @Tags Container
 // @Produce json
-// @Success 200 {array} Container
+// @Success 200 {array} models.Container
 // @Router /containers [get]
-func (a *API) getAllContainers(c *gin.Context) {
-	var containers []Container
-	a.db.Find(&containers)
+func (r *Routes) GetAllContainers(c *gin.Context) {
+	var containers []models.Container
+	r.db.Find(&containers)
 	c.JSON(http.StatusOK, containers)
 }
 
@@ -49,12 +50,12 @@ func (a *API) getAllContainers(c *gin.Context) {
 // @Tags Container
 // @Produce json
 // @Param id path int true "Container ID"
-// @Success 200 {object} Container
+// @Success 200 {object} models.Container
 // @Router /containers/{id} [get]
-func (a *API) getContainerByID(c *gin.Context) {
+func (r *Routes) GetContainerByID(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Param("id"))
-	var container Container
-	if err := a.db.First(&container, id).Error; err != nil {
+	var container models.Container
+	if err := r.db.First(&container, id).Error; err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Record not found!"})
 		return
 	}
@@ -69,13 +70,13 @@ func (a *API) getContainerByID(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "Container ID"
-// @Param input body ContainerPost true "Updated container object"
-// @Success 200 {object} ContainerPost
+// @Param input body models.ContainerRequest true "Updated container object"
+// @Success 200 {object} models.ContainerRequest
 // @Router /containers/{id} [put]
-func (a *API) updateContainer(c *gin.Context) {
+func (r *Routes) UpdateContainer(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Param("id"))
-	var container Container
-	if err := a.db.First(&container, id).Error; err != nil {
+	var container models.Container
+	if err := r.db.First(&container, id).Error; err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Record not found!"})
 		return
 	}
@@ -85,6 +86,6 @@ func (a *API) updateContainer(c *gin.Context) {
 		return
 	}
 
-	a.db.Save(&container)
+	r.db.Save(&container)
 	c.JSON(http.StatusOK, container)
 }
